all current archive tests green